elaborate README.md and parameters file

--- a/parameters_RotationScan.ini
+++ b/parameters_RotationScan.ini
@@ -1,32 +1,38 @@
 [INPUT_FILES]
-EnzymePDB =         <enzyme pdb>              # input enzyme pdb file (.pdb)reaction center at
-				          # origin and molecule is aligned to desired 
-                                           # position (eg. molecule's centroid on y-axis ), 
-                                           # if required.
-SubstratePDB =     <substrate pdb>               # input substrate pdb file (.pdb) reaction 
-                                           # center at origin and molecule is aligned 
-                                           # to desired position (eg. molecule's 
-                                           # centroid on y-axis ), if required.
-                                     
+EnzymePDB =         <enzyme pdb>              # input enzyme pdb file (*.pdb)
+				          
+SubstratePDB =     <substrate pdb>               # input substrate pdb file (*.pdb) 
+                                                                              
 [PARAMETERS]
-JOB_Name =                                 # Name of the job
+JOB_Name =      <job name>                           # Name of the job
 EnzymePrefix = <enzyme prefix>                       # name of an enzyme used as suffix for output (eg. dot1L).
 SubstratePrefix = <substrate prefix>                      # name of the substrate used as suffix for file output (eg. NCP).
-Substrate_Reaction_Atom = E LYS 79 NZ      # chain_id residue_number residue_name atom_name
-Enzyme_Reaction_Atom = K SAM 500 CE        # chain_id residue_number residue_name atom_name   
-Enzyme_Scissile_Atom2 = K SAM 500 SD       # chain_id residue_number residue_name atom_name; 
-                                           # it is the atom bonded to enzyme reacting atom             
-Resolution =  10                           # Resolution of a rotation scan. High resolution scans 
-					  # are computationally expensive                       
+Substrate_Reaction_Atom = <pdb chain id> <residue name> <residue number> <atom name> # eg. In "E LYS 79 NZ", chain id = E, residue name = LYS, residue number = 79 atom name = NZ
+                                                      # This atom involve in enzymatic reaction.
 
-# Trait-Bryan angles for roation in 3D                          
-AlphaLower = -180                          # lower value of an rotation angle range about x-axis
-AlphaUpper = 180                           # upper value of an rotation angle range about x-axis  
-BetaLower = -90                            # lower value of an rotation angle range about y-axis
-BetaUpper = 90                             # upper value of an rotation angle range about y-axis
-GammaLower = -180                          # lower value of an rotation angle range about z-axis
-GammaUpper = 180                           # upper value of an rotation angle range about z-axis 
-VDW_Radii_Sum_RAs = 3.3                    # is the sum of van der Waal's radii of two reacting atoms. 
+Enzyme_Reaction_Atom = <pdb chain id> <cofactor name> <cofactor number> <atom name> # eg. In "K SAM 500 CE ", chain id = K, residue name = SAM, residue number = 500 atom name = CE       
+						# This atom of cofactor involve in enzymatic reaction.
+Enzyme_Scissile_Atom2 = <pdb chain id> <cofactor name> <cofactor number> <atom name> # eg. In "K SAM 500 SD", chain id = K, residue name = SAM, 
+									             # residue number = 500 atom name = SD       
+                                                                                     # it is the atom bonded to enzyme's cofactor's reacting atom             
+Resolution =  <integer>                           # Resolution of a rotation scan. High resolution scans 
+					  # are computationally expensive. As the resolution increases, the number of elemental rotations increase exponentially.                       
+
+# Trait-Bryan angles for roation in 3D                       
+# Each rotation in a rotation scan constitutes 3 elemental rotations alpha, beta and gamma about x, y, and z-axes, respectively.
+# A scan range of -180 to + 180 for alpha, -90 to +90 for beta and -180 to +180 for gamma covers all the space 
+# that an object under roation could explore in three-dimensions.   
+AlphaLower = <integer>                          # lower value of an elemental rotation angle (alpha) about x-axis
+AlphaUpper = <integer>                            # upper value of an elemental rotation angle (alpha) about x-axis 
+BetaLower = <integer>                             # lower value of an elemental rotation angle (beta) about y-axis
+BetaUpper = <integer>                              # upper value of an elemental rotation angle (beta) about y-axis
+GammaLower = <integer>                           # lower value of an elemental rotation angle (gamma) about z-axis
+GammaUpper = <integer>                            # upper value of an elemental rotation angle (gamma) about z-axis
+
+VDW_Radii_Sum_RAs = <float>                    # is the sum of van der Waal's radii of two reacting atoms. 
                                            # e.g., in case of methyltransferase, it the sum of vdw radii of CE of SAM and NE of Lys of substrate.
-VDW_Clash_Threshold = 0.4                  # Atom overlap in Angstroms for assigning the clash between atoms.
-WriteOut_transformed_PDBs = false           # TRUE or FALSE; wether to write pdb files from the roation scan or not.
+                                           # the vdw radii for atoms are taken from  taken from Probe program
+                                           # ref: Probe program; DOI: 10.1006/jmbi.1998.2400 
+                                           # 'atom': <vdw> = {'H': -2.0, 'C': 1.7, 'N': 1.625, 'O': 1.480, 'P': 1.871, 'S': 1.782}
+VDW_Clash_Threshold = 0.4                  # Atom overlap in Angstroms for assigning the clash between atoms. Default is 0.4 according to Probe program
+WriteOut_transformed_PDBs = false           # TRUE or FALSE; whether to write pdb files from the roation scan or not.
